# french-revolution-sentiment-analysis

./: .gitignore  README.md  data_model.md  databricks.yml  pyproject.toml
data/lookup/: figures.csv
data/sample/: document_ids.txt
resources/: bootstrap.yml  gold_figure_mentions_by_period.yml  gold_figure_stance_by_creator_period.yml  gold_figure_stance_by_subject_period.yml  gold_top_stance_contexts.yml  silver_ai_extract_date_candidates.yml  silver_clean_text.yml  silver_context_stance_ai_query.yml  silver_context_windows.yml  silver_date_candidates.yml  silver_entity_mentions.yml  silver_figures.yml  silver_metadata.yml  silver_selected_publication_dates.yml
resources/gold/: figure_mentions_by_period.yml  figure_stance_by_creator_period.yml  figure_stance_by_document.yml  figure_stance_by_period.yml  figure_stance_by_subject_period.yml  top_stance_contexts.yml
resources/infra/: bootstrap.yml
resources/ingestion/: bronze_ingestion.yml
resources/orchestration/: full_pipeline.yml
resources/silver/: ai_publication_date_candidates.yml  document_model.yml  document_text_model.yml  figure_mention_stance.yml  figure_mentions.yml  figure_model.yml  mention_contexts.yml  quality_summary.yml  select_publication_dates.yml
src/frc_sentiment/gold/: build_figure_mentions_by_period.py  build_figure_stance_by_creator_period.py  build_figure_stance_by_document.py  build_figure_stance_by_period.py  build_figure_stance_by_subject_period.py  (+1 more)
tests/: test_build_context_windows.py  test_build_date_candidates.py  test_parse_dates.py  test_parse_metadata.py
(+18 files in other folders)
