[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "frc-sentiment"
version = "0.1.0"
description = "Analysis of rhetorical stance toward major French Revolution figures."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]